<resources>
    <string name="app_name">Music</string>
    <string name="widget_album_art_desc">Album art</string>
    <string name="widget_prev">Previous</string>
    <string name="widget_play_pause">Play or pause</string>
    <string name="widget_next">Next</string>
    <string name="widget_repeat_desc">repeat</string>
    <string name="_00_00_00_00">00:00 / 00:00</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="widget_shuffle">shuffle</string>
</resources>